fix spacing and alignment in intro and work section

--- a/style.css
+++ b/style.css
@@ -22,6 +22,14 @@ a{
     margin: 0 auto;
 }
 
+@media screen and (min-width: 800px){             
+    #container{
+        width: 80vw;
+        /* max-width: 1200px; */
+        margin: 0 auto;
+    }
+   }
+
 header{
     display: flex;
     /* background: red; */
@@ -61,18 +69,32 @@ header{
     padding: 15px;
    }
    
-   .sectionTitle{
+.sectionTitle{
     font-weight: bold;
     font-size: 28px;
     margin-bottom: 20px;
-   }
+}
 
-   section{
+@media screen and (min-width: 800px){            
+    .sectionTitle{
+        font-size: 42px;
+    }
+}
+
+section{
     padding: 20px 0;
-   }
+}
 
 
-   #intro{
+@media screen and (min-width: 800px){       
+    section{
+        padding: 50px 0;
+        margin: 50px 0;
+    }
+}
+
+
+#intro{
     padding-top: 10vh;
 }
 
@@ -91,3 +113,55 @@ header{
 #intro p:nth-child(3){
  font-weight: normal;
 }
+
+#work{
+    /* background: yellow; */
+}
+   
+#work #gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+   
+#work #gallery li{
+    width: 100%;
+    height: 250px;
+    list-style: none;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+
+#gallery li:before{
+  content:'';
+   background: linear-gradient(rgba(245, 246, 252, 0), rgba(0, 0, 0, 0.2));
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+   
+}
+   
+#gallery li .content{
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+       height: 100%;
+       opacity: 0;
+      transition: .25s all ease-in-out;
+      position: relative;
+      top: 20px;
+}
+   
+#gallery li:hover{
+   
+   
+}
+   
+#gallery li:hover .content{
+    opacity: 1;
+    top: 0;
+ }
